[refactor] 카카오 api 호출 방식 변경